objects/EUR_CRM_Volume_Potential_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>EUR_Volume_Potential_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Weight_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Weight Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Weight__c</fullName>
        <label>Maximum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Id__c</fullName>
        <formula>EUR_CRM_Volume_Potential__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Name__c</fullName>
        <formula>TEXT( EUR_CRM_Volume_Potential__r.EUR_CRM_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential__c</fullName>
        <label>Volume Potential</label>
        <referenceTo>EUR_CRM_Volume_Potential__c</referenceTo>
        <relationshipName>EUR_Volume_Potential_Thresholds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EUR Volume Potential Threshold (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_Volume_Potential_Threshold_EU</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>DK Volume Potential Threshold (EU)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_VolumePotentialThreshold_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BGN</value>
        </filters>
        <label>EUR BG All VolumePotentialThreshold View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_Volume_Potential_Threshold_EU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CHF</value>
        </filters>
        <label>EUR CH Volume Potential Threshold (EU)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_Volume_Potential_Threshold_EU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>MAD</value>
        </filters>
        <label>EUR MA Volume Potential Threshold (EU)</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_VolumePotentialThreshold_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>EUR PT All VolumePotentialThreshold View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Volume_Potential_Threshold</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>ZAR</value>
        </filters>
        <label>EUR ZA Volume Potential Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VPT-{0000}</displayFormat>
        <label>EUR Volume Potential Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR Volume Potential Threshold (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>